fixed nav menu alignment

--- a/frontend/src/components/nav/Nav.css
+++ b/frontend/src/components/nav/Nav.css
@@ -17,7 +17,6 @@
 }
 
 .navigation {
-  height: 80px;
   position: relative;
   width: 100%;
   margin: 0;
